deployment/chart-api/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.netcoder.com.pl
    http:
      paths:
      - backend:
          serviceName: kuberapi
          servicePort: 80
        path: /
